--- a/ToDoey/Base.lproj/Main.storyboard
+++ b/ToDoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="nxr-GT-jOe" id="Y5K-TM-lO7"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoey" id="HPa-Rw-HoG"/>
+                    <navigationItem key="navigationItem" title="ToDoey" id="HPa-Rw-HoG">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nYY-Fu-cfQ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="nxr-GT-jOe" id="qfL-6U-Sgb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Sd-I9-JB1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
